syntax = "proto3";
import "google/protobuf/timestamp.proto";
package main;


service URLService {
  rpc CreateShortURL(CreateURLRequest) returns (CreateURLResponse);
  rpc GetOriginalURL(GetURLRequest) returns (GetURLResponse);
  rpc DeleteURL(DeleteURLRequest) returns (DeleteURLResponse);
}


message CreateURLRequest {
  string short_code = 1;
  string original_url = 2;
  optional google.protobuf.Timestamp expires_at = 3;
  optional string user_id = 4;
}

message CreateURLResponse{
  string short_code = 1;
}

message GetURLRequest {
  string short_code = 1;
}

message GetURLResponse {
  string original_url = 1;
  optional google.protobuf.Timestamp expires_at = 2;
}

message DeleteURLRequest {
  string short_code = 1;
}

message DeleteURLResponse {
  bool success = 1;
}


